Fix save status misalignment

--- a/client/src/view/widgets/ReviewDayWidget/ReviewDayWidget.less
+++ b/client/src/view/widgets/ReviewDayWidget/ReviewDayWidget.less
@@ -1,9 +1,12 @@
 #review-day-comments {
   width: 100%;
-  max-width: 75rem;
   font-size: 1.5rem;
   resize: vertical;
   height: 25rem;
+}
+
+.review-day-comments-container {
+  max-width: 75rem;
 }
 
 .review-day-save-button {
